# azure-fastapi-nextjs

./: .env  .gitattributes  .gitignore  CLAUDE.md  README.md  azure-container-app.sh  azure-scripts  check-deployed-version.sh  deploy-containerapp.sh  deployment.md  development.md  docker-compose.yml  release-notes.md  setup-containerapp.sh  test-deployment.py
.claude/commands/: deploy.md
azure_deploy/: .env  .secret_example  create_api_app_container_service.sh  create_docker_image_registry.sh  create_search_service.sh  pyproject.toml  pyrightconfig.json  search_add_index.py
azure_deploy/azure_deploy/: index_experiences.py  search_add_experiences.py  search_add_index.py
azure_deploy/azure_search/: search_add_experiences.py  search_add_hotels.py
backend/: Dockerfile  README.md  analyze_product_fields.py  analyze_urls.py  consolidation_plan.py  fix_amazon_urls.py  fix_formatting.py  pyproject.toml  remove_product_urls.py  resolve_short_urls.py  test_amazon_links.py  test_correct_urls.py  test_dynamic_tables.py  test_fixed_links.py  test_full_urls.py  test_simple.py  test_table_config.py
backend/website/: .gitignore  CLAUDE.md  README.md  agent_clustering.py  ai_agent.py  ai_enrich_search_results.py  ai_o3_summary.py  amazon.py  amazon_products.py  amazon_urls.txt  ask_ai.py  azure_indexer.py  azure_langchain_example.py  azure_search_client.py  azure_search_vector_client.py  base.py  biohack_topics.py  biohacks.py  chain.py  chat_app.test.html  chat_app.ts.test  clean_price_ranges.py  cross_encoders.py  experiences.py  faq.py  fine_tuning_examples.py  images.py  index_experiences.py  jennas_amazon_products.py  last_permalink.txt  main.py  models.py  near_dupe_llm_classifier.py  neural_opensearch.py  plan_of_attack.py  pytest.ini  questions.py  research_report.js  search.py  settings.py  (+4 more)
backend/website/pydantic_ai_examples/: chat_app.py  config.py  pydantic_model.py  question_graph.py
backend/website/static/: styles.css
backend/website/templates/: about.html  amazon-products.html  faqs.html  footer.html  head.html  headline.html  index.html  index.html.WITH_TOPICS  navbar.html  products.html  question_summary.html  questions.html  request_topic_modal.html  search.html  tech.html  topic.html  topic_biohack.html  topic_drivers.html  topic_faqs.html  topic_navbar.html  topic_question_hack.html  topic_unexpected.html
backend/website/tests/: test_main.py
etl/: pyproject.toml  upload_to_azure_search.py
etl/azure_search_indexing/: search_add_experiences.py
etl/etl/azure_search_indexing/: search_add_experiences.py
frontend/app/: layout.tsx  page.tsx
frontend/app/lib/: definitions.ts  placeholder-data.ts
frontend/app/ui/: fonts.ts  nobsmed-logo.tsx
