[project]
name = "azure_deploy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "langchain-openai (>=0.3.21,<0.4.0)",
    "rich (>=14.0.0,<15.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "azure-search-documents (>=11.5.2,<12.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "website @ ../backend"
]
package-mode = true
packages = [{include = "*", from = "azure_deploy"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
